# llama-memory

./: .gitignore  CONTINUE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
llama_memory/: __init__.py  budget.py  capture.py  cli.py  config.py  database.py  embeddings.py  entities.py  ingester.py  mcp_server.py  memory.py  session.py  summarizer.py  transcript.py
llama_memory/hooks/: __init__.py  auto_session_resume.py  auto_session_save.py
scripts/: install.sh  migrate.py
